--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
-@import "tailwindcss/preflight";
-@import "tailwindcss/utilities";
+/* @import "tailwindcss/preflight";
+@import "tailwindcss/utilities"; */
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+@import "tailwindcss";
 
 @layer base {
   :root {
