--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,6 @@
-/* @import "tailwindcss/preflight";
-@import "tailwindcss/utilities"; */
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
-@import "tailwindcss";
+@tailwind utilities;
 
 @layer base {
   :root {
